--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,4 @@ MAIL_PORT=
 MAIL_USERNAME=
 MAIL_PASSWORD=
 
-# Mail credentials live
-#MAIL_HOST=
-#MAIL_PORT=
-#MAIL_USERNAME=
-#MAIL_PASSWORD=
+ALLOWED_CLIENTS=
